<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.jaskelai.object_tracking.presentation.ui.auth.set_bio.SetBioViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_auth"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include
            layout="@layout/view_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            app:vm="@{viewModel}" />

        <TextView
            style="@style/TitleAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:gravity="center"
            android:text="@string/title_set_bio" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_margin_start_end_sign_in"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/et_margin_start_end_sign_in"
            android:hint="@string/name_set_bio">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextWhiteSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.setBioFieldMediator.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextLayoutWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_margin_start_end_sign_in"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/et_margin_start_end_sign_in"
            android:hint="@string/surname_set_bio">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextWhiteSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.setBioFieldMediator.surname}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/BtnWhiteBorder"
            android:layout_width="@dimen/btn_width_auth"
            android:layout_height="@dimen/btn_height_auth"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/et_margin_start_end_sign_in"
            android:layout_marginTop="@dimen/margin_l"
            android:layout_marginEnd="@dimen/et_margin_start_end_sign_in"
            android:onClick="@{() -> viewModel.onRegisterClicked()}"
            android:text="@string/register_btn_set_bio" />

    </LinearLayout>
</layout>