<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.github.jaskelai.object_tracking.presentation.ui.auth.auth_phone.AuthPhoneViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_auth">

        <include
            layout="@layout/view_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:vm="@{viewModel}" />

        <TextView
            style="@style/TitleAuth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:gravity="center"
            android:text="@string/type_phone_text_auth_phone"
            app:layout_constraintBottom_toTopOf="@id/etlPhoneNumberAuthPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etlPhoneNumberAuthPhone"
            style="@style/EditTextLayoutWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_margin_start_end_sign_in"
            android:layout_marginEnd="@dimen/et_margin_start_end_sign_in"
            android:layout_marginBottom="@dimen/margin_xl"
            android:hint="@string/phone_number_auth_phone"
            app:layout_constraintBottom_toTopOf="@id/btnSendSmsAuthPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumberAuthPhone"
                style="@style/EditTextWhiteSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@={viewModel.phoneNumber}"
                app:setPhoneMask="@{true}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendSmsAuthPhone"
            style="@style/BtnWhiteBorder"
            android:layout_width="@dimen/btn_width_auth"
            android:layout_height="@dimen/btn_height_auth"
            android:enabled="@{viewModel.isSendSmsButtonEnabledLiveData()}"
            android:onClick="@{() -> viewModel.onSignInButtonClicked()}"
            android:text="@string/send_sms_btn_auth_phone"
            android:textColor="@color/selector_white_btn_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etlPhoneNumberAuthPhone"
            app:strokeColor="@color/selector_white_btn_background" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBarSmsAuthPhone"
            android:layout_width="@dimen/progress_bar_auth_width"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:alpha="0.9"
            app:isVisible="@{viewModel.progressLiveData}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSendSmsAuthPhone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_progress_dots" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>