<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.jaskelai.object_tracking.presentation.ui.main_flow.item_details.ItemDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/view_back_btn"
            layout="@layout/view_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:vm="@{viewModel}" />

        <ImageView
            android:id="@+id/iv"
            android:layout_width="@dimen/iv_item_details"
            android:layout_height="@dimen/iv_item_details"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            app:imageUrl="@{viewModel.photoUrl}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_back_btn" />

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/name_label_new_item"
            android:textColor="@color/color_default"
            android:textSize="@dimen/text_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv"
            app:layout_constraintTop_toTopOf="@id/iv" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@{viewModel.name}"
            android:textColor="@color/color_default"
            android:textSize="@dimen/text_l"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label"
            app:layout_constraintStart_toStartOf="@id/tv_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_category_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_l"
            android:layout_marginStart="@dimen/margin_m"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/category_label_new_item"
            android:textColor="@color/color_default"
            android:textSize="@dimen/text_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@{viewModel.category}"
            android:textColor="@color/color_default"
            android:textSize="@dimen/text_l"
            app:layout_constraintTop_toBottomOf="@id/tv_category_label"
            app:layout_constraintStart_toStartOf="@id/tv_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Title" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_ml"
            android:layout_marginEnd="@dimen/margin_m"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@{viewModel.description}"
            android:textColor="@color/color_default"
            android:textSize="@dimen/text_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv"
            tools:text="TitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitleTitle" />

        <com.google.android.material.button.MaterialButton
            style="@style/BtnRedBorder"
            android:layout_width="@dimen/btn_width_auth"
            android:layout_height="@dimen/btn_height_auth"
            android:text="@string/delete_details_screen"
            android:layout_marginBottom="@dimen/margin_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>